[ ALERT_CONFIG ]
link1 = Sir Doggy Jvla's Kofi = https://steamcommunity.com/linkfilter/?u=https://ko-fi.com/sirdoggyjvla,
link2 = Workshop = https://steamcommunity.com/id/jvladeya/myworkshopfiles/?appid=108600,
link3 = Github = https://steamcommunity.com/linkfilter/?u=https://github.com/SirDoggyJvla,
[ ------ ]

[ 04/22/25 ]
- New keybinds added.
- Translation entries for checking stairs, windows and doors.
- Now supports Mod Update and Alert System
- Code cleanup
- Takes into account the last changes to my API
- You can't check behind doorframes anymore (not really needed)
[ ------ ]

[ 04/25/25 ]
- Stairs now block vision when checking behind stairs and windows.
[ ------ ]

[ 04/26/25 ]
- Fixed issue with keybind for checking stairs not saving.
[ ------ ]